--- a/강의요약.md
+++ b/강의요약.md
@@ -21,7 +21,7 @@
     - neuron은 주택의 크기를 입력으로 받아 price를 예측하는 역할을 한다.
     - 더 큰 신경망은 더 많은 뉴런으로 이루어져있다. (size뿐만 아니라 zip code, wealth, family size 등 다양한 요소를 고려하여 price를 예측하는 경우)
 
-![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled.png)
+![Untitled](자료/Untitled.png)
 
 - 위의 그림에서 4개의 x 입력을 받는다. input layer와 neuron layer는 면밀한 관계를 갖는다. 데이터가 더 주어질 수록 정확도는 올라간다.
 
@@ -39,7 +39,7 @@
     
     - Neural Net examples
     
-    ![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%201.png)
+    ![Untitled](자료/Untitled%201.png)
     
 - Supervised Learning
     - Structured Data : Table로 정의되는 data
@@ -52,12 +52,12 @@
 - 데이터 양 증가, 컴퓨터 성능 향상, 알고리즘의 개선으로 인해 ( Data, Computation, Algorithms)
     - ex) ReLU함수를 이용한 gradient 소멸 문제 해결 (경사하강이 더 급격하게 이루어짐) → 계산 능력의 향상
     
-    ![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%202.png)
+    ![Untitled](자료/Untitled%202.png)
     
 - 더 큰 데이터, 더 큰 신경망을 이용해서 크게 성장할 수 있었다. (그러나 한계는 존재)
     - 어떻게 훈련시키느냐에 적은 데이터에서는 작은 신경망이 더 좋은 성능을 보일 수도 있다. 그러나 데이터가 많아지면 필연적으로 거대한 신경망이 더 좋은 성능을 보인다.
 
-![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%203.png)
+![Untitled](자료/Untitled%203.png)
 
 - 빠른 계산이 중요 → 아이디어를 코드로 구현한 후 다양한 실험을 시간 내에 진행할 수 있게됨. feedback 과정이 원활해짐
 
@@ -94,9 +94,9 @@
     ⇒ **pred_y = sigmoid(wx+b)**
     
 
-![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%204.png)
+![Untitled](자료/Untitled%204.png)
 
-![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%205.png)
+![Untitled](자료/Untitled%205.png)
 
 ---
 
@@ -105,17 +105,17 @@
 - pred_y를 실제 y(label)에 가깝도록 w,b에 대한 학습을 위해 비용함수의 개념이 필요함
 - **하나의 sample**에 대해 실제 y값과 비교하여 얼마나 잘 예측되었는지를 측정하는 지표
 
-![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%206.png)
+![Untitled](자료/Untitled%206.png)
 
 - **Loss Function(general)** :
     
-    ![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%207.png)
+    ![Untitled](자료/Untitled%207.png)
     
     → logistic regression에선 최적화 함수가 non-convex 위와 같은 loss function을 사용하지 않는다. → global minimum을 찾기 어려워짐
     
     - **logistic regression의 loss function**
     
-    ![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%208.png)
+    ![Untitled](자료/Untitled%208.png)
     
     → 1 case : y=1 → loss function = -log(y_pred) “y_pred은 1에 가까워야한다”
     
@@ -125,7 +125,7 @@
     
 - Cost Function(J(w,b)) : 손실 함수를 각각의 훈련 샘플에 적용한 값을 전체 샘플 수로 나눈 값, **전체 샘플에 대한 값**
 
-![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%209.png)
+![Untitled](자료/Untitled%209.png)
 
 ---
 
@@ -134,11 +134,11 @@
 - Gradient Descent
     - J(w,b)를 최소(global optima)로하는 w,b를 찾아야한다. w는 차원의 제한이 없다.
         
-        ![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%2010.png)
+        ![Untitled](자료/Untitled%2010.png)
         
         일반적으로 초기값 w,b=0으로 설정
         
-        ![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%2011.png)
+        ![Untitled](자료/Untitled%2011.png)
         
         (α는 학습률을 의미), w의 위치에 따라 dw의 부호가 결정된다.
         
@@ -163,7 +163,7 @@
     
     3-step : J=3v
     
-    ![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%2012.png)
+    ![Untitled](자료/Untitled%2012.png)
     
 
 ---
@@ -179,7 +179,7 @@
     
 - 최종 변수를 Final output var, 미분하려고 하는 변수를 var라고 정의한다면 아래와 같이 정의된다.
     
-    ![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%2013.png)
+    ![Untitled](자료/Untitled%2013.png)
     
 
 ---
@@ -188,7 +188,7 @@
 
 - **한 개의 sample**일 때 아래와 같이 정의할 수 있다.
     
-    ![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%2014.png)
+    ![Untitled](자료/Untitled%2014.png)
     
 - 두 개의 feature x1, x2가 있다고 정의하면
     
@@ -196,7 +196,7 @@
     
     → z= w1x1 + w2x2 + b로 정의
     
-    ![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%2015.png)
+    ![Untitled](자료/Untitled%2015.png)
     
     역방향 전개를 통해 손실함수 L이 최소가 될 수 있는 a값을 구한다. (find dL/da)
     
@@ -207,6 +207,6 @@
 
 - Logistic regression on m examples에서의 비용 함수는 아래와 같다.
 
-![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%208b4f932df45748eabc48c921a175e89c/Untitled%2016.png)
+![Untitled](자료/Untitled%2016.png)
 
 → 이 때 i가 1~m까지 진행될 때 a^(1), a^(2), a^(3)…a^(m)까지 각각의 a에 대한 dj/da를 계산한다.
