--- a/실습.ipynb
+++ b/실습.ipynb
@@ -68,13 +68,113 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (2) 더 많은 벡터화 예제"
+    "### (4) 파이썬의 브로드캐스팅"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "A=np.array([[56.0, 0.0, 4.4, 68.0],\n",
+    "            [1.2, 104.0, 52.0, 8.0],\n",
+    "            [1.8, 135.0, 99.0, 0.9]])\n",
+    "\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cal = A.sum(axis=0)\n",
+    "print(cal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "percentage = 100*A/(cal.reshape(1,4)) # (3,4)를 (1,4)로 나눈다 -> broadcasting\n",
+    "print(percentage)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### (5) 파이썬과 넘파이 벡터"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      2\u001b[0m a \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mrandn(\u001b[39m5\u001b[39m) \u001b[39m# rank 1 array -> 잘 사용하지 않는다\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39m# 아래와 같이 사용한다 -> 행벡터, 열벡터 임을 명확하게하기 위해서\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.random.randn(5) # rank 1 array -> 잘 사용하지 않는다\n",
+    "\n",
+    "# 아래와 같이 사용한다 -> 행벡터, 열벡터 임을 명확하게하기 위해서\n",
+    "\"\"\"\n",
+    "a = np.random.randn(5,1) -> column vector\n",
+    "a = np.random.randn(1,5) -> row vector\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a.shape) # (5,) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a.T) # a의 외적"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.dot(a,a.T))"
+   ]
   }
  ],
  "metadata": {
@@ -93,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
