--- a/강의 요약.md
+++ b/강의 요약.md
@@ -12,7 +12,7 @@
     - Given some intermediate values in NN → z^(1)~z^(m)까지의 값이 있다.
     - z에 대한 평균과 분산을 계산 ( 표준편차가 0일 경우를 대비해 분모에 시그마를 더해준다) 이를 통해 평균이 0 분산이 1이 되도록 만든다. → 그러나 모든 은닉 유닛이 같은 평균과 분산을 갖는 것은 좋지 않으므로 아래와 같은 값을 정의한다 (표준화된 평균과 분산에서 특정 평균과 분산을 갖도록 정규화한다)
         
-        ![Untitled](%E1%84%80%E1%85%A1%E1%86%BC%E1%84%8B%E1%85%B4%20%E1%84%8B%E1%85%AD%E1%84%8B%E1%85%A3%E1%86%A8%2084d175b0577a49f7b1fe6241891dc3b8/Untitled.png)
+        ![Untitled](자료/Untitled.png)
         
     - *γ*  와  *β*  는 학습과정에서 학습하는 파라미터로 이를 조절해서 은닉층이 각각 다른 평균과 분산을 갖도록 할 수 있다. → 입력값과의 차이 (입력값은 평균0 분산1을 갖도록 조정하지만 은닉층은 다르도록 조절함 → 활성화함수의 비선형을 살릴 수 있도록)
 
