17주차_캐글 필사

--- a/캐글 필사.ipynb
+++ b/캐글 필사.ipynb
@@ -411,7 +411,132 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "fig,ax = plt.subplots(1,2,figsize=(15,5))\n",
+    "ax[0].plot(losses)\n",
+    "ax[0].set_title('loss')\n",
+    "ax[1].plot(accs)\n",
+    "ax[1].set_title('acc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd \n",
+    "\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "import cv2\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.utils.data import Dataset,DataLoader\n",
+    "from torchvision import transforms,models\n",
+    "from tqdm import tqdm_notebook as tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.read_csv('bengaliai-cv19/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GraphemeDataset(Dataset):\n",
+    "    def __init__(self,df,_type='train'):\n",
+    "        self.df = df\n",
+    "    def __len__(self):\n",
+    "        return len(self.df)\n",
+    "    def __getitem__(self,idx):\n",
+    "        image = self.df.iloc[idx][1:].values.reshape(64,64).astype(float)\n",
+    "        return image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = ResNet34().to(device)\n",
+    "model.load_state_dict(torch.load('/kaggle/input/trained400/resnet34_400epochs_saved_weights.pth'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Resize(df,size=64):\n",
+    "    resized = {} \n",
+    "    df = df.set_index('image_id')\n",
+    "    for i in tqdm(range(df.shape[0])):\n",
+    "        image = cv2.resize(df.loc[df.index[i]].values.reshape(137,236),(size,size))\n",
+    "        resized[df.index[i]] = image.reshape(-1)\n",
+    "    resized = pd.DataFrame(resized).T.reset_index()\n",
+    "    resized.columns = resized.columns.astype(str)\n",
+    "    resized.rename(columns={'index':'image_id'},inplace=True)\n",
+    "    return resized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "test_data = ['test_image_data_0.parquet','test_image_data_1.parquet','test_image_data_2.parquet','test_image_data_3.parquet']\n",
+    "predictions = []\n",
+    "batch_size=1\n",
+    "for fname in test_data:\n",
+    "    data = pd.read_parquet(f'/kaggle/input/bengaliai-cv19/{fname}')\n",
+    "    data = Resize(data)\n",
+    "    test_image = GraphemeDataset(data)\n",
+    "    test_loader = torch.utils.data.DataLoader(test_image,batch_size=1,shuffle=False)\n",
+    "    with torch.no_grad():\n",
+    "        for idx, (inputs) in tqdm(enumerate(test_loader),total=len(test_loader)):\n",
+    "            inputs.to(device)\n",
+    "            \n",
+    "            outputs1,outputs2,outputs3 = model(inputs.unsqueeze(1).float().cuda())\n",
+    "            predictions.append(outputs3.argmax(1).cpu().detach().numpy())\n",
+    "            predictions.append(outputs2.argmax(1).cpu().detach().numpy())\n",
+    "            predictions.append(outputs1.argmax(1).cpu().detach().numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = pd.read_csv('bengaliai-cv19/sample_submission.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission.target = np.hstack(predictions)\n",
+    "submission.head(10)"
+   ]
   }
  ],
  "metadata": {
